--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/js-cookie": "^3.0.6",
     "@types/jwt-decode": "^3.1.0",
+    "@types/lodash": "^4.14.202",
     "@types/react-datepicker": "^4.19.5",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
